[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/minigame.gd" type="Script" id=1]
[ext_resource path="res://assets/minigame.theme" type="Theme" id=2]
[ext_resource path="res://assets/materials/crt_monitor.material" type="Material" id=3]

[node name="minigame_frame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1440.0
margin_bottom = -720.0
mouse_filter = 1
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minigame" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg_color" type="ColorRect" parent="minigame"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="vbox" type="VBoxContainer" parent="minigame"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 12.0
margin_right = -32.0
margin_bottom = -12.0
custom_constants/separation = 18
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="minigame/vbox"]
margin_top = 121.0
margin_right = 416.0
margin_bottom = 140.0
text = "Minigame Placeholder"
align = 1

[node name="win_btn" type="Button" parent="minigame/vbox"]
margin_top = 158.0
margin_right = 416.0
margin_bottom = 177.0
text = "Win Game"

[node name="lose_btn" type="Button" parent="minigame/vbox"]
margin_top = 195.0
margin_right = 416.0
margin_bottom = 214.0
text = "Lose Game"

[node name="instructions" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg_color" type="ColorRect" parent="instructions"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="instructions"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="RichTextLabel" parent="instructions/vbox"]
margin_right = 384.0
margin_bottom = 264.0
rect_min_size = Vector2( 384, 264 )
text = "/bin/sh $ man minigame_name

> The instructions for the minigame go here"
scroll_active = false

[node name="hbox" type="HBoxContainer" parent="instructions/vbox"]
margin_top = 268.0
margin_right = 384.0
margin_bottom = 287.0
custom_constants/separation = 20
alignment = 1

[node name="run_btn" type="Button" parent="instructions/vbox/hbox"]
margin_left = 60.0
margin_right = 195.0
margin_bottom = 19.0
text = "EXECUTE PROGRAM"

[node name="skip_btn" type="Button" parent="instructions/vbox/hbox"]
margin_left = 215.0
margin_right = 323.0
margin_bottom = 19.0
disabled = true
text = "USE CASSETTE"

[node name="crt_effect" type="ColorRect" parent="."]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
